Refactor Deprecated URL